--- a/.github/workflows/test-time.yml
+++ b/.github/workflows/test-time.yml
@@ -2,7 +2,7 @@ name: Test Time
 on:
   issue_comment:
     types: [created, edited, deleted]
-    if: ${{ startsWith(github.event.comment.body, '⌛ ')
+    if: ${{ startsWith(github.event.comment.body, '⌛ ') }}
       
 jobs:
   one:
