--- a/.github/ISSUE_TEMPLATE/req-example.yaml
+++ b/.github/ISSUE_TEMPLATE/req-example.yaml
@@ -5,4 +5,4 @@ body:
     id: requirement-description
     attributes:
       label: Requirement description
-      description: Describe the requirement here in simple and comprehensible terms. Keep it as brief as possible without omitting crucial details. For example, you can write the requirement in the form of a user story.
+      description: Describe the requirement here in simple and comprehensible terms. Keep it as brief as possible without omitting crucial details. For example, you can write the requirement in the form of a [user story](https://en.wikipedia.org/wiki/User_story).
