--- a/.github/ISSUE_TEMPLATE/req-example.yaml
+++ b/.github/ISSUE_TEMPLATE/req-example.yaml
@@ -16,6 +16,13 @@ body:
     attributes:
       label: Verification description
       description: Explicitly list all characteristics and criteria that are to be used to verify the successful implementation of the requirement. Do not use phrases such as "see above description" or "has to fulfill the requirement". Instead, write down a list of verifiable characteristics, for example. However, it is completely legitimate and even recommended to refer to existing test specifications.
+      placeholder: |
+
+        - Follow the general test specification xyz
+        - Make an update available for the application
+        - Start the application
+        - Wait at least 10 seconds
+        - Verify that a proper notification will be displayed
     validations:
       required: true
   - type: textarea
