--- a/.github/ISSUE_TEMPLATE/req-example.yaml
+++ b/.github/ISSUE_TEMPLATE/req-example.yaml
@@ -3,7 +3,7 @@ description: This template is used to specify a general requirement.
 labels: ["requirement"]
 body:
   - type: textarea
-    id: requirement-description
+    id: requirement
     attributes:
       label: Requirement description
       description: Describe the requirement here in simple and comprehensible terms. Keep it as brief as possible without omitting crucial details. For example, you can write the requirement in the form of a [user story](https://en.wikipedia.org/wiki/User_story). Avoid attachments like emails or Office documents as far as possible. Instead, adopt the relevant content directly into this issue. Note that the requirement must not contain any open questions/decisions or possible options that might be implemented. Keep the requirement unambiguous. Please use English at least for simple issues. However, you can also write in German.
@@ -14,9 +14,9 @@ body:
       value: |
         _Consider content like this:_
         > As a \<role> I can \<capability>, so that \<receive benefit>.
-        > _and so on_
+        > ...
   - type: textarea
-    id: verification-description
+    id: verification
     attributes:
       label: Verification description
       description: Explicitly list all characteristics and criteria that are to be used to verify the successful implementation of the requirement. Do not use phrases such as "see above description" or "has to fulfill the requirement". Instead, write down a list of verifiable characteristics, for example. However, it is completely legitimate and even recommended to refer to existing test specifications.
@@ -28,9 +28,9 @@ body:
         _Consider content like this:_
         > - Follow the general test specification _xyz_
         > - Verify that \<capability> will take \<action> in \<way>
-        > - and so on
+        > ...
   - type: textarea
-    id: dependency-description
+    id: dependency
     attributes:
       label: Dependency
       description: As soon as a comprehensible specification of the requirement becomes too complicated here, divide it into additional (requirement) issues. To maintain the context, list these here as [task list](https://docs.github.com/en/get-started/writing-on-github/working-with-advanced-formatting/about-task-lists).
@@ -40,9 +40,9 @@ body:
         _Consider content like this:_
         > - [ ] Reference to parallel (requirement) issue
         > - [ ] Reference to subordinate (requirement) issue
-        > - [ ] and so on
+        > ...
   - type: textarea
-    id: relationship-description
+    id: relationship
     attributes:
       label: Relationship
       description: If you only want to specify the relationship to other issues without any direct dependencies, do not list them in the Dependency section above. Instead use an ordinary list in this section.
@@ -51,4 +51,5 @@ body:
       value: |
         _Consider content like this:_
         > - Reference to related issue
-        > - and so one
+        > - Reference to specification
+        > ...
