--- a/.github/ISSUE_TEMPLATE/req-example.yaml
+++ b/.github/ISSUE_TEMPLATE/req-example.yaml
@@ -1,5 +1,5 @@
-name: General requirement form example
-description: This template is used to specify a general requirement.
+name: General requirement template
+description: This template is used to specify a general requirement. Please note the comments at the fields provided.
 labels: ["requirement"]
 body:
   - type: markdown
